[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameFinishedScreen.gd" type="Script" id=1]
[ext_resource path="res://EyesClosing/eyesclosing5.png" type="Texture" id=2]
[ext_resource path="res://EyesClosing/eyesclosing2.png" type="Texture" id=3]
[ext_resource path="res://EyesClosing/eyesclosing4.png" type="Texture" id=4]
[ext_resource path="res://EyesClosing/eyesclosing1.png" type="Texture" id=5]
[ext_resource path="res://EyesClosing/eyesclosing3.png" type="Texture" id=6]
[ext_resource path="res://alagard.ttf" type="DynamicFontData" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_thanks"
} ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="GameFinishedScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Game_finished_eyes" type="AnimatedSprite" parent="."]
position = Vector2( 160, 90 )
frames = SubResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 160, 90 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasModulate"]
anims/RESET = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[node name="RichTextLabel" type="Label" parent="."]
margin_left = 78.0
margin_top = 75.0
margin_right = 250.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 4 )
text = "Thank you for playing!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Game_finished_eyes" to="." method="_on_Game_finished_eyes_animation_finished"]
